package zak380mGazyli;

public interface Board {
    void display();
}
